--- a/Example/CustomHttpHeadersURLProtocolSample/Base.lproj/Main.storyboard
+++ b/Example/CustomHttpHeadersURLProtocolSample/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -17,25 +17,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bo5-9R-EAz">
-                                <rect key="frame" x="272" y="285" width="57" height="30"/>
-                                <animations/>
-                                <state key="normal" title="Request"/>
-                                <connections>
-                                    <action selector="doRequest" destination="BYZ-38-t0r" eventType="touchUpInside" id="W94-om-30Z"/>
-                                </connections>
-                            </button>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vL6-wj-7Ju">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="deviceRGB"/>
+                            </webView>
                         </subviews>
-                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Bo5-9R-EAz" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="OMw-J6-38O"/>
-                            <constraint firstItem="Bo5-9R-EAz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="l3e-hf-Kmy"/>
+                            <constraint firstItem="vL6-wj-7Ju" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="0ll-UN-jso"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vL6-wj-7Ju" secondAttribute="bottom" id="VoJ-TK-hVB"/>
+                            <constraint firstItem="vL6-wj-7Ju" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="bAz-6u-Jyk"/>
+                            <constraint firstAttribute="trailing" secondItem="vL6-wj-7Ju" secondAttribute="trailing" id="jOK-NX-FiB"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="webView" destination="vL6-wj-7Ju" id="xwQ-cy-SF0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="528" y="344"/>
         </scene>
     </scenes>
 </document>
